adding a few more comments

--- a/GymJones/index.html
+++ b/GymJones/index.html
@@ -28,7 +28,7 @@
                     </div>
                 </div><!-- /.info-bar -->
                 
-                <header>
+                <header><!-- HEAD SECTION -->
                     <div class="branding">
                         <div class="container clearfix">
                             <div class="logo">
@@ -45,7 +45,7 @@
                 </header>
 
 
-                <div id="main">
+                <div id="main"><!-- MAIN SECTION -->
                     <div class="container">
                         <section class="content">
                             <h1>WE<br />TRAIN</h1>
@@ -63,7 +63,7 @@
             </div><!-- /#wrapper -->
         </div><!-- .page-content -->
 
-        <div class="sidebar">
+        <div class="sidebar"><!-- SIDEBAR --> 
             <label for="sidebartoggler" class="icon-exit"></label>
             <ul>
                 <li>HOME</li>
